[package]
name = "rocket_prometheus"
description = """
Prometheus instrumentation for Rocket applications.
"""
version = "0.7.0"
authors = ["Ben Sully <ben@bsull.io>"]
repository = "https://github.com/sd2k/rocket_prometheus"
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["rocket", "prometheus", "instrumentation", "monitoring"]
readme = "README.md"

[dependencies]
prometheus = { version = "0.11", default-features = false }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "c24f15c18f02319be83af4f3c1951dc220b52c5e" }

[dev-dependencies]
once_cell = "1.2.0"
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev = "c24f15c18f02319be83af4f3c1951dc220b52c5e" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }

[badges]
maintenance = { status = "passively-maintained" }
